[package]
name = "sui-summary-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
clap = "4.5.48"
iced = "0.13.1"
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "ef255b3" }
move-model-2 = { git = "https://github.com/MystenLabs/sui", rev = "ef255b3" }
move-symbol-pool = { git = "https://github.com/MystenLabs/sui.git", rev = "ef255b3" }
rfd = "0.15.4"
rmcp = { version = "0.6.4", features = ["transport-worker", "transport-streamable-http-server"] }
serde = "1.0.226"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }

[[bin]]
name = "sui-summary-mcp"
path = "src/bin/mcp.rs"

[[bin]]
name = "sui-summary-explorer"
path = "src/bin/gui.rs"
